<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20sp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/calculator"
        android:padding="10sp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@color/lig_grey"
        android:textStyle="bold"
        android:gravity="center"
        />
    
    <TextView
        android:id = "@+id/tvResultOfIO"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text=""
        android:textStyle="bold"
        android:padding="10sp"
        android:textSize="30sp"
        android:gravity="end|bottom"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/but_seven"
            android:layout_width="0px"
            android:onClick="buttonClick"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Seven"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/but_eight"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Eight"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/but_nine"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Nine"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/but_divide"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonOperator"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Divide"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/but_four"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Four"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/but_five"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Five"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/but_six"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Six"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/but_multiply"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonOperator"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Multiply"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/but_one"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/One"
            android:padding="10sp"
            android:onClick="buttonClick"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/but_two"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Two"
            android:onClick="buttonClick"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/but_three"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Three"
            android:padding="10sp"
            android:onClick="buttonClick"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/but_subtract"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Subtraction"
            android:padding="10sp"
            android:onClick="buttonOperator"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/but_zero"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Zero"
            android:padding="10sp"
            android:onClick="buttonClick"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/but_dot"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Dot"
            android:padding="10sp"
            android:onClick="buttonDot"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/but_clr"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/CLR"
            android:padding="10sp"
            android:onClick="buttonCLRClick"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/but_addition"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Addition"
            android:onClick="buttonOperator"
            android:padding="10sp"
            android:layout_margin="5sp"
            android:textColor="@color/black"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/but_equal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/lig_grey"
            android:text="@string/Equal"
            android:padding="10sp"
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:onClick="buttonEqual"
            android:textColor="@color/black"
            />

    </LinearLayout>

</LinearLayout>